--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,19 @@ body {
 }
 
 
+/*  Small devices (landscape phones, 576px and up) */
+@media (min-width: 320px) and (max-width: 767.98px) { 
+  .cursor {
+  width: 0px;
+  height: 0px;
+}
 
+.cursor::after {
+  content: "";
+  width: 0px;
+  height: 0px;
+}
+ }
 
 
 
