--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ body {
 /*  Small devices (landscape phones, 576px and up) */
 @media (min-width: 320px) and (max-width: 767.98px) { 
   .cursor {
+     position: block;
   width: 0px;
   height: 0px;
 }
@@ -149,6 +150,7 @@ body {
 /*   content: ""; */
   width: 0px;
   height: 0px;
+  position: block;
 }
  }
 
